--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@diia-inhouse/healthcheck",
+    "name": "@kant2002-diia-inhouse/healthcheck",
     "version": "1.6.1",
     "description": "Healthcheck",
     "main": "dist/index.js",
@@ -32,32 +32,32 @@
         "protobufjs": "7.2.5"
     },
     "peerDependencies": {
-        "@diia-inhouse/types": ">=3.0.0",
-        "@diia-inhouse/utils": ">=2.11.0"
+        "@kant2002-diia-inhouse/types": ">=3.0.0",
+        "@kant2002-diia-inhouse/utils": ">=2.11.0"
     },
     "devDependencies": {
-        "@diia-inhouse/configs": "1.26.3",
-        "@diia-inhouse/errors": "1.6.1",
-        "@diia-inhouse/eslint-config": "3.4.0",
-        "@diia-inhouse/test": "5.1.0",
-        "@diia-inhouse/types": "4.25.0",
-        "@diia-inhouse/utils": "2.33.1",
-        "@diia-inhouse/validators": "1.12.1",
+        "@kant2002-diia-inhouse/configs": "^1.26.3",
+        "@kant2002-diia-inhouse/errors": "^1.6.1",
+        "@kant2002-diia-inhouse/eslint-config": "^3.4.0",
+        "@kant2002-diia-inhouse/test": "^5.1.0",
+        "@kant2002-diia-inhouse/types": ">=4.25.0",
+        "@kant2002-diia-inhouse/utils": "^2.33.1",
+        "@kant2002-diia-inhouse/validators": "^1.12.1",
         "@types/lodash": "4.14.202",
         "@types/node": "20.10.1",
-        "type-fest": "4.8.2"
+        "type-fest": "4.12.0"
     },
     "release": {
-        "extends": "@diia-inhouse/configs/dist/semantic-release/package",
+        "extends": "@kant2002-diia-inhouse/configs/dist/semantic-release/package",
         "branches": [
             "main"
         ]
     },
     "commitlint": {
-        "extends": "@diia-inhouse/configs/dist/commitlint"
+        "extends": "@kant2002-diia-inhouse/configs/dist/commitlint"
     },
     "eslintConfig": {
-        "extends": "@diia-inhouse/eslint-config",
+        "extends": "@kant2002-diia-inhouse/eslint-config",
         "overrides": [
             {
                 "files": [
@@ -73,7 +73,7 @@
         ]
     },
     "jest": {
-        "preset": "@diia-inhouse/configs/dist/jest"
+        "preset": "@kant2002-diia-inhouse/configs/dist/jest"
     },
-    "prettier": "@diia-inhouse/eslint-config/prettier"
+    "prettier": "@kant2002-diia-inhouse/eslint-config/prettier"
 }
